--- a/TrainR-Admin/TrainR-Admin.csproj
+++ b/TrainR-Admin/TrainR-Admin.csproj
@@ -12,4 +12,22 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="AddDeparture.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="RemoveCity.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="AddDeparture.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="RemoveCity.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+
 </Project>
